[tool.poetry]
name = "apaper"
version = "0.1.0"
description = "Analysis of papers using grobid and python scripts"
authors = ["sbayonag <sebastianbg_1516@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygrobid = "^0.1.6"
poetry = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
