[tool.poetry]
name = "apaper"
version = "0.1.0"
description = "Analysis of papers using grobid and python scripts"
authors = ["sbayonag <sebastianbg_1516@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.3.2"
grobid-client-python = "^0.0.5"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
wordcloud = "^1.8.2.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
